<resources>
    <string name="app_name">Study Mate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_notes">Create Notes</string>
    <string name="create_your_notes_manually_or_use_nocr_to_extract_text_from_images">Create your notes manually, add\nfiles or use OCR to extract text \nfrom images.</string>
    <string name="note_title">Note Title</string>
    <string name="save">SAVE</string>
    <string name="scroll_view_of_all_notes">Scroll View of all notes</string>
    <string name="add_files">Add Files</string>
    <string name="ocr">OCR</string>
    <string name="enter_text_here">Enter text here:</string>
    <string name="add">Add</string>
    <string name="landing_page">Landing Page</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="home_text">Get started and automate the process of\nNotemaking, Sharing and Reviewing\nthrough the power of ML, NLP and OCR\ntechnologies.</string>
    <string name="make_notes">make notes</string>
    <string name="email_address">Email Address</string>
    <string name="user_id">User ID</string>
    <string name="notes">Notes Created:   </string>
    <string name="files">Files Uploaded:   </string>
    <string name="question_cards">Question Cards:   </string>
    <string name="notes_created">Notes Created</string>
    <string name="view_update_notes">View or update your notes here</string>
    <string name="question_cards_frag">Question Cards</string>
    <string name="q_cards_des">Explore the question answering system\nbuilt over your note. Choose any note\nand start asking questions.</string>
    <string name="question_answering_system">Question Answering System</string>
</resources>